--- a/Resources/SimgoAppTest.properties
+++ b/Resources/SimgoAppTest.properties
@@ -7,3 +7,4 @@ TEST_RAIL_IOS_PLAN=iOS Application
 TEST_RAIL_IOS_SUITE=89
 TEST_RAIL_USER_EMAIL=gimso.qa@gmail.com
 TEST_RAIL_USER_PASSOWRD=gimso\!Tsoltar
+TEST_RAIL_PROJECT_ID=6
