--- a/Resources/vSim.properties
+++ b/Resources/vSim.properties
@@ -33,12 +33,21 @@ PASSWORD=gimso\!Tsoltar
 QA_BOARD_SLOT=1
 
 TEST_RAIL_PERSIST_SUITE=91
+
 TEST_RAIL_PLUG_PLAN=Plug Test Test Test - to delete
 TEST_RAIL_PLUG_SUITE=80
-TEST_RAIL_SVCP_SUITE=98
+
+TEST_RAIL_SVCP_SUITE=125
+TEST_RAIL_SVCP_PLAN=default_plan_name
+
 TEST_RAIL_USER_EMAIL=gimso.qa@gmail.com
 TEST_RAIL_USER_PASSOWRD=gimso\!Tsoltar
+
+TEST_RAIL_PROJECT_ID=7
+TEST_RAIL_BASE_URL=https\://gimso.testrail.com/index.php?/plans/view/
 
 USER=simgo
 VSIM_ID_LENGTH=12
 XCODE_PROJECT_FOLDER=/Users/nirberman/git/automation/Util/src/iOS_projects
+
+SERIAL_COM_PORT=17
