--- a/Resources/Sip.properties
+++ b/Resources/Sip.properties
@@ -51,6 +51,8 @@ TEST_RAIL_RESTAPI_PLAN=RestAPI Generic Plan
 TEST_RAIL_RESTAPI_SUITE=94
 TEST_RAIL_USER_EMAIL=gimso.qa@gmail.com
 TEST_RAIL_USER_PASSOWRD=gimso\!Tsoltar
+TEST_RAIL_PROJECT_ID=6
+
 
 TRIP_API_URL=http\://admin.qa.gimso.net\:5350/trips
 
