Add TEST_RAIL_PROJECT_ID in Resources Add TEST_RAIL_BASE_URL and TEST_RAIL_SVCP_PLAN in vSim.properties Change the DEFAULT_PROJECT_ID in TestRailAPI AUTO-248

--- a/Resources/Gateway.properties
+++ b/Resources/Gateway.properties
@@ -55,6 +55,7 @@ TEST_RAIL_RESTAPI_SUITE=94
 TEST_RAIL_USER_EMAIL=gimso.qa@gmail.com
 TEST_RAIL_USER_PASSOWRD=gimso\!Tsoltar
 TRIP_API_URL=http\://d.qa.gimso.net\:5350/trips
+TEST_RAIL_PROJECT_ID=6
 
 UPDATE_API_URL=http\://gw.qa.gimso.net/api/v1/allocation/
 USAGE_USER=User
