--- a/Resources/Gateway.properties
+++ b/Resources/Gateway.properties
@@ -9,8 +9,8 @@ CREATE_ALLOCATION_API_URL=http\://gw.qa.gimso.net/api/v1/allocation
 DATA_USAGE_API_URL=http\://gw.qa.gimso.net/api/v1/reports/
 DB_URL=db.qa.gimso.net
 
-EC2_PERSIST_URL_HOME=http\://d.qa.gimso.net\:5350/admin/
-EC2_PERSIST_URL_INVENTORY=http\://d.qa.gimso.net\:5350/admin/inventory/
+EC2_PERSIST_URL_HOME=http\://admin.qa.gimso.net\:5350/admin/
+EC2_PERSIST_URL_INVENTORY=http\://admin.qa.gimso.net\:5350/admin/inventory/
 
 FOTA_API_URL=http\://gw.qa.gimso.net/api/v1/versions/
 FTP_INNER_FOLDER=ftp_simgo
@@ -19,12 +19,12 @@ FTP_PORT=21
 FTP_SERVER=o.qa.gimso.net
 FTP_USER=ftp_simgo
 
-GCM_API_URL=http\://d.qa.gimso.net\:5350/users/session
+GCM_API_URL=http\://admin.qa.gimso.net\:5350/users/session
 
 INCOMING_SMS_API_URL=http\://gw.qa.gimso.net/api/v1/sms/incoming/
 
 LOGGER_DNS_NAME=o.qa.gimso.net
-LOGIN_API_URL=http\://d.qa.gimso.net\:5350/users/session?hnum\=
+LOGIN_API_URL=http\://admin.qa.gimso.net\:5350/users/session?hnum\=
 LOGIN_PHONE_NUMBER=+972551234567
 
 MYSQL_JDBC_DRIVER=com.mysql.jdbc.Driver
@@ -33,16 +33,16 @@ MYSQL_PORT=3306
 NUMBER_OF_ECHOS=5
 NUMBER_OF_FSIM=1
 
-OLD_STATUS_REPORT_API_URL=http\://d.qa.gimso.net\:5350/trips/
-OUTGOING_NUMBER_API_URI=http\://d.qa.gimso.net\:5350/trips/
+OLD_STATUS_REPORT_API_URL=http\://admin.qa.gimso.net\:5350/trips/
+OUTGOING_NUMBER_API_URI=http\://admin.qa.gimso.net\:5350/trips/
 OUTGOING_CALL_API_URL=http\://gw.qa.gimso.net/api/v1/outgoing/call/
 
 PASSWORD=gimso\!Tsoltar
-PERSIST_API_URL=http\://gw.qa.gimso.net/plug/status/
+PERSIST_API_URL=http\://admin.qa.gimso.net:5350/plug/status/
 
 QA_BOARD_SLOT=1
 
-STATUS_REPORT_URL=http\://d.qa.gimso.net\:5350/mobile-app-mgr/v1/status
+STATUS_REPORT_URL=http\://admin.qa.gimso.net\:5350/mobile-app-mgr/v1/status
 
 TELES_URL=http\://104.196.110.4\:61500/board/
 TEST_RAIL_GATEWAY_PLAN=Gateway testrailtest
@@ -55,14 +55,13 @@ TEST_RAIL_RESTAPI_SUITE=94
 TEST_RAIL_USER_EMAIL=gimso.qa@gmail.com
 TEST_RAIL_USER_PASSOWRD=gimso\!Tsoltar
 TEST_RAIL_PROJECT_ID=6
-
-TRIP_API_URL=http\://d.qa.gimso.net\:5350/trips
+TRIP_API_URL=http\://admin.qa.gimso.net\:5350/trips
 
 UPDATE_API_URL=http\://gw.qa.gimso.net/api/v1/allocation/
 USAGE_USER=User
 USER=simgo
 
 VER_CODE_PHONE_NUMBER=+972551234567
-VERIFICATION_CODE_URL=http\://d.qa.gimso.net\:5350/users/session?hnum\=
+VERIFICATION_CODE_URL=http\://admin.qa.gimso.net\:5350/users/session?hnum\=
 
 XCODE_PROJECT_FOLDER=/Users/nirberman/Desktop/SimGo
