Resources: Resources\Sip.properties: add sip plan and suite and base url Resources\Dyno.properties: add gate keeper and sim server suite id's and default names Resources\Gateway.properties: changs URL's d.qa to admin.qa, add testrail base url AUTO-146

--- a/Resources/Dyno.properties
+++ b/Resources/Dyno.properties
@@ -42,17 +42,22 @@ QA_BOARD_SLOT=1
 STATUS_REPORT_URL=http\://admin.qa.gimso.net\:5350/mobile-app-mgr/v1/status
 TELES_URL=http\://104.196.110.4\:61500/board/
 
-TEST_RAIL_GATEWAY_PLAN=Gateway V1.0.4
+TEST_RAIL_GATEWAY_PLAN=Gateway Test
 TEST_RAIL_GATEWAY_SUITE=101
-TEST_RAIL_PERSIST_PLAN=Persist Generic Plan
+TEST_RAIL_PERSIST_PLAN=Persist Test
 TEST_RAIL_PERSIST_SUITE=91
 TEST_RAIL_PLUG_SUITE=80
-TEST_RAIL_RESTAPI_PLAN=RestAPI Generic Plan
+TEST_RAIL_RESTAPI_PLAN=RestAPI Test
 TEST_RAIL_RESTAPI_SUITE=94
+TEST_RAIL_GATEKEEPER_PLAN=GateKeeper Test
+TEST_RAIL_GATEKEEPER_SUITE=93
+TEST_RAIL_SIM_SERVER_PLAN=SimServer Test
+TEST_RAIL_SIM_SERVER_SUITE=100
 
 TEST_RAIL_USER_EMAIL=gimso.qa@gmail.com
 TEST_RAIL_USER_PASSOWRD=gimso\!Tsoltar
 TEST_RAIL_PROJECT_ID=6
+TEST_RAIL_BASE_URL=https\://gimso.testrail.com/index.php?/plans/view/
 
 TRIP_API_URL=http\://admin.qa.gimso.net\:5350/trips
 
