--- a/Resources/Gateway.properties
+++ b/Resources/Gateway.properties
@@ -34,6 +34,7 @@ NUMBER_OF_ECHOS=5
 NUMBER_OF_FSIM=1
 
 OLD_STATUS_REPORT_API_URL=http\://admin.qa.gimso.net\:5350/trips/
+
 OUTGOING_NUMBER_API_URI=http\://admin.qa.gimso.net\:5350/trips/
 OUTGOING_CALL_API_URL=http\://gw.qa.gimso.net/api/v1/outgoing/call/
 
@@ -41,10 +42,9 @@ PASSWORD=gimso\!Tsoltar
 PERSIST_API_URL=http\://admin.qa.gimso.net:5350/plug/status/
 
 QA_BOARD_SLOT=1
-
 STATUS_REPORT_URL=http\://admin.qa.gimso.net\:5350/mobile-app-mgr/v1/status
-
 TELES_URL=http\://104.196.110.4\:61500/board/
+
 TEST_RAIL_GATEWAY_PLAN=Gateway testrailtest
 TEST_RAIL_GATEWAY_SUITE=101
 TEST_RAIL_PERSIST_PLAN=Persist Generic Plan
@@ -55,6 +55,8 @@ TEST_RAIL_RESTAPI_SUITE=94
 TEST_RAIL_USER_EMAIL=gimso.qa@gmail.com
 TEST_RAIL_USER_PASSOWRD=gimso\!Tsoltar
 TEST_RAIL_PROJECT_ID=6
+TEST_RAIL_BASE_URL=https\://gimso.testrail.com/index.php?/plans/view/
+
 TRIP_API_URL=http\://admin.qa.gimso.net\:5350/trips
 
 UPDATE_API_URL=http\://gw.qa.gimso.net/api/v1/allocation/
@@ -63,5 +65,4 @@ USER=simgo
 
 VER_CODE_PHONE_NUMBER=+972551234567
 VERIFICATION_CODE_URL=http\://admin.qa.gimso.net\:5350/users/session?hnum\=
-
 XCODE_PROJECT_FOLDER=/Users/nirberman/Desktop/SimGo
