--- a/Resources/vph_tests.properties
+++ b/Resources/vph_tests.properties
@@ -1,54 +1,3 @@
 # vSIM Tests
 #Sun Mar 27 11:39:15 IDT 2016
-
-DB_URL=db.staging.gimso.net
-DELAYED_CONNECTION_CONFIG_NAME=delayed_connection_staging_sgs4
-DELAYED_CONNECTION_PLUG_VERSION_FILE_NAME=plug_v0.7.1_delayed_connection_staging_sgs4.sgo
-DELAYED_CONNECTION_PLUG_VERSION_GOOGLE_DRIVE_URL=https\://drive.google.com/uc?export\=download&id\=0B8lRQ3eU5QJIWm9OSnFGdFVUTFk
-DELAYED_CONNECTION_VERSION_NAME=0.7.1
-
-EC2_PERSIST_URL_HOME=http\://o.staging.gimso.net\:5350/admin/
-EC2_PERSIST_URL_INVENTORY=http\://o.staging.gimso.net\:5350/admin/inventory/
-
-FTP_INNER_FOLDER=ftp_simgo
-FTP_PASSWORD=SimgoFiles
-FTP_PORT=21
-FTP_SERVER=o.qa.gimso.net
-FTP_USER=ftp_simgo
-
-HEADER_SIZE=6
-LOGGER_DNS_NAME=o.staging.gimso.net
-MAX_HEADER_LENGTH=0xffff
-
-MYSQL_JDBC_DRIVER=com.mysql.jdbc.Driver
-MYSQL_PORT=3306
-
-NUMBER_OF_ECHOS=5
-NUMBER_OF_FSIM=1
-
-OPCODE_MAX_VALUE=0x7f
-OPCODE_MSB=0x80
-
-PASSWORD=gimso\!Tsoltar
-QA_BOARD_SLOT=1
-
-TEST_RAIL_PERSIST_SUITE=91
-
-TEST_RAIL_PLUG_PLAN=Plug Test Test Test - to delete
-TEST_RAIL_PLUG_SUITE=80
-
-TEST_RAIL_SVCP_SUITE=125
-TEST_RAIL_SVCP_PLAN=default_plan_name
-
-TEST_RAIL_USER_EMAIL=gimso.qa@gmail.com
-TEST_RAIL_USER_PASSOWRD=gimso\!Tsoltar
-TEST_RAIL_SIP_SUITE=106
-TEST_RAIL_PROJECT_ID=7
-TEST_RAIL_SIP_PLAN=Config Test
-TEST_RAIL_BASE_URL=https\://gimso.testrail.com/index.php?/plans/view/
-
-USER=simgo
-VSIM_ID_LENGTH=12
-XCODE_PROJECT_FOLDER=/Users/nirberman/git/automation/Util/src/iOS_projects
-
-SERIAL_COM_PORT=17
+TEST=TEST
