--- a/Resources/vSim.properties
+++ b/Resources/vSim.properties
@@ -38,7 +38,7 @@ TEST_RAIL_PLUG_PLAN=Plug Test Test Test - to delete
 TEST_RAIL_PLUG_SUITE=80
 
 TEST_RAIL_SVCP_SUITE=125
-TEST_RAIL_SVCP_PLAN=20161116Plan
+TEST_RAIL_SVCP_PLAN=Omer&Ben-Plan
 
 TEST_RAIL_USER_EMAIL=gimso.qa@gmail.com
 TEST_RAIL_USER_PASSOWRD=gimso\!Tsoltar
